--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@gsap/react": "^2.1.2",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/material": "^6.4.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
@@ -23,17 +26,20 @@
     "framer-motion": "^12.0.5",
     "gsap": "^3.12.7",
     "gsap-trial": "^3.12.7",
+    "lucide-react": "^0.479.0",
     "mui": "^0.0.1",
     "next": "15.1.5",
     "next-nprogress-bar": "^2.4.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.6.0",
     "three": "^0.173.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
