--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^4.1.3",
+    "@lottiefiles/dotlottie-react": "^0.13.2",
     "@mui/material": "^6.4.2",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
