--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "next-nprogress-bar": "^2.4.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-paystack": "^6.0.0",
     "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.6.0",
     "three": "^0.173.0",
